--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -41,6 +41,8 @@
         android:id="@+id/save"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/save" />
+        android:text="@string/save" 
+    	android:onClick="onClick"/>
+    	
 
 </LinearLayout>
